# sdmt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.xml
checkpoint/: config.fti  sdmt.archive
doc/: Doxyfile  configs.conf
doc/html/: annotated.html  class_s_d_m_t-members.html  class_s_d_m_t.html  classes.html  classserialize-members.html  classserialize.html  classserialize_1_1_i-members.html  classserialize_1_1_i.html  classtinyxml2_1_1_dyn_array-members.html  classtinyxml2_1_1_dyn_array.html  classtinyxml2_1_1_mem_pool-members.html  classtinyxml2_1_1_mem_pool.html  classtinyxml2_1_1_mem_pool__inherit__graph.map  classtinyxml2_1_1_mem_pool_t-members.html  classtinyxml2_1_1_mem_pool_t.html  classtinyxml2_1_1_mem_pool_t__coll__graph.map  classtinyxml2_1_1_str_pair-members.html  classtinyxml2_1_1_str_pair.html  classtinyxml2_1_1_x_m_l_attribute-members.html  classtinyxml2_1_1_x_m_l_attribute.html  classtinyxml2_1_1_x_m_l_comment-members.html  classtinyxml2_1_1_x_m_l_comment.html  classtinyxml2_1_1_x_m_l_comment__coll__graph.map  classtinyxml2_1_1_x_m_l_comment__inherit__graph.map  classtinyxml2_1_1_x_m_l_const_handle-members.html  classtinyxml2_1_1_x_m_l_const_handle.html  classtinyxml2_1_1_x_m_l_declaration-members.html  classtinyxml2_1_1_x_m_l_declaration.html  classtinyxml2_1_1_x_m_l_declaration__coll__graph.map  classtinyxml2_1_1_x_m_l_declaration__inherit__graph.map  classtinyxml2_1_1_x_m_l_document-members.html  classtinyxml2_1_1_x_m_l_document.html  classtinyxml2_1_1_x_m_l_document__coll__graph.map  classtinyxml2_1_1_x_m_l_element-members.html  classtinyxml2_1_1_x_m_l_element.html  classtinyxml2_1_1_x_m_l_element__coll__graph.map  classtinyxml2_1_1_x_m_l_handle-members.html  classtinyxml2_1_1_x_m_l_handle.html  classtinyxml2_1_1_x_m_l_node-members.html  classtinyxml2_1_1_x_m_l_node.html  (+126 more)
doc/html/search/: all_0.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_e.js  functions_f.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
doc/latex/: annotated.tex  class_s_d_m_t.tex  classserialize.tex  classserialize_1_1_i.tex  classtinyxml2_1_1_dyn_array.tex  classtinyxml2_1_1_mem_pool.tex  classtinyxml2_1_1_mem_pool_t.tex  classtinyxml2_1_1_str_pair.tex  classtinyxml2_1_1_x_m_l_attribute.tex  classtinyxml2_1_1_x_m_l_comment.tex  classtinyxml2_1_1_x_m_l_const_handle.tex  classtinyxml2_1_1_x_m_l_declaration.tex  classtinyxml2_1_1_x_m_l_document.tex  classtinyxml2_1_1_x_m_l_element.tex  classtinyxml2_1_1_x_m_l_handle.tex  classtinyxml2_1_1_x_m_l_node.tex  classtinyxml2_1_1_x_m_l_printer.tex  classtinyxml2_1_1_x_m_l_text.tex  classtinyxml2_1_1_x_m_l_unknown.tex  classtinyxml2_1_1_x_m_l_util.tex  classtinyxml2_1_1_x_m_l_visitor.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  hierarchy.tex  refman.tex  struct_s_d_m_t_1_1_ckpt_info.tex  struct_s_d_m_t_1_1_config.tex  struct_s_d_m_t_1_1_segment.tex  structtinyxml2_1_1_entity.tex  structtinyxml2_1_1_long_fits_into_size_t_minus_one.tex  structtinyxml2_1_1_long_fits_into_size_t_minus_one_3_01false_01_4.tex
example/: CMakeLists.txt  test_iter.py  test_recovery.py  test_restart.py
example/cpp/: CMakeLists.txt  monte_carlo.cc
example/fortran/: CMakeLists.txt  fort_monte_carlo.f90  sdmt_capi.cpp  sdmt_mod.f90  test.f90
example/graph_tool_pseudocodes/: AID.txt  AOD.txt  APCN.txt  CC.txt  GC.txt  PR.txt  TC.txt
example/python/: PSO.py  config_python_test.xml  genetic_algorithm_TSP.py  mnist.py  monte_carlo.py  olympic_city.csv  pagerank.py  test.py
example/python/checkpoint/: config.fti
models/: sdmt_graph_tool_xgboost_model  sdmt_graph_tool_xgboost_scaler
python/: setup.py
python/sdmt/: __init__.py  api.py  scripts.py  sdmt_graph_tool_requirements.txt  sdmt_graph_tool_select_PS.py
python/sdmt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: common.h  huffman.h  pybind.cc  rle.h  sdmt.cc  sdmt.h  sdmt_capi.cc  sdmt_mod.f90  serialization.h  stl_allocator.cc  stl_allocator.h
src/sdmt_graph_tool/: GPSPE_main.cpp  TextTable.h  analyzer.h  communication.h  global_file_IO.cpp  global_file_IO.h  global_graph.h  global_graph_stat.h  graph_class.h  graph_stat_tools.h  partitioning_strategies.h  tools.h
test/: CMakeLists.txt  test_checkpoint.cc  test_iter.cc  test_restart.cc  test_xml.cc
test/cpp/: CMakeLists.txt  config_cpp_test2.xml  parameter.txt  test_checkpoint.cc  test_iter.cc  test_parameter.cc  test_restart.cc
test/fortran/: CMakeLists.txt  config_fortran_test2.xml  fortran_checkpoint.f90  fortran_parameter.f90  fortran_test.f90  parameter.txt
test/fortran/checkpoint/: config.fti
test/python/: config_python_test.xml  config_python_test2.xml  test_change.py  test_iter.py  test_parameter.py  test_recovery.py  test_restart.py
test/python/checkpoint/: config.fti
